# pyric

./: MANIFEST.in  Makefile  README.md  build.sh  pyproject.toml
src/pyric/: __init__.py
src/pyricc/: _version.py
tests/: test_colors.py
